--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="Sebastian Ibañez" />
     <meta name="robots" content="index, follow" />
     <link rel="stylesheet" href="./src/css/style.css" />
+    <link rel="shortcut icon" href="./src/images/Logo.svg" type="image" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
